--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,13 +5,11 @@ branches:
 clone_folder: c:\projects\gdl
 configuration:
   - Release
-  # - Debug
+  - Debug
 environment:
   matrix:
-  # #- platform: mingw64810i686
   - platform: mingw64630x8664
-  - platform: mingw64720x8664
-  # - platform: mingw64810i686  # Not available
+  - platform: mingw64630i686
    
 matrix:
   fast_finish: true
